--- a/cart/cart-style.css
+++ b/cart/cart-style.css
@@ -1,11 +1,25 @@
+
+
 body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     justify-content: center;
     width: 500px;
+    height: 1000px; 
+    
+    
+    
+}
+section {
+    margin-top: 1.5em;
     height: 1000px;
-    
-    
-    
+    width: 500px;
+    border: solid;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 header {
     width: auto;
@@ -24,15 +38,7 @@ img {
 }
 
 
-section {
-    margin-top: 1.5em;
-    height: 1000px;
-    width: 500px;
-    border: solid;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center+6;
-}
+
 
 table {
     border-color: black;
