--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,10 @@
-
+header {
+    background-color: dimgray;
+    display: flex;
+    justify-content: flex-end;
+    border-radius: 25px;
+    
+}
 body {
     --color1: #ffffff;
     --color2: #ffffff;
@@ -29,39 +35,42 @@ body {
 }
 
 main {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     height: auto;
     background-image: url(../assets/background.jpg);
     background-attachment: fixed;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center ;
+    
+    
     margin-bottom: calc(var(--footer-height));
+}
+.welcome {
+    align-self: center;
+    text-align: center;
+    width: 500px;
+    color: lightsalmon;
+    background-image: url(../assets/wood.jpg);
+    border: solid;
+    border-radius: 25px;
+
 }
 
 section {
-
-    width: 75%;
+    flex-direction: row;
+    width: 100%;
     max-width: 80%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: var(--gutter);
-    padding-bottom: var(--gutter);
-    margin-top: var(--gutter);
-    margin-bottom: var(--gutter);
+    align-self: auto;
+    flex-wrap: wrap;
+    
+  
    
     
 }
 
-header {
-    display: flex;
-    justify-content: flex-end;
-    height: var(--header-height);
-    box-shadow: var(--shadow);
-}
+
 
 footer {
     display: flex;
@@ -72,7 +81,6 @@ footer {
 
 
 h2 {
-    background-color: darkkhaki;
     font-size: 1.8rem;
     font-weight: bold;
 }
@@ -99,7 +107,7 @@ content {
 }
 
 p {
-    margin: var(--gutter);
+   margin:.5em;
 }
   
 footer {
@@ -113,34 +121,26 @@ footer {
     box-shadow: var(--shadow);
 }
   
-  @keyframes pulse {
-    20% {
-      transform: rotate3d(-10, -10, -10, 50deg) scale(1.2);
-    }
-
-    40% {
-        transform: rotate3d(10, 10, -10, 50deg) scale(1);
-    }
-
-    60% {
-        transform: rotate3d(-10, 10, 10, 50deg) scale(1.2);
-      }
-
-    80% {
-        transform: rotate3d(10, 10, 10, 50deg) scale(1);
-    }
+  
 p {
     border-style:solid black;
 }
 .name {
-    font-size: 1em;
+    font-size: 1.5em;
 }
+ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 
-  }
+
+
+}
   li {
-    border-style: solid;
+    border: solid;
+    border-color: lightsalmon;
     background-color: rgb(221, 154, 66);
-    height: 525px;
+    height: 350px;
     width: 200px;
     margin: 1em;
     justify-content: center;
